<resources>
    <string name="app_name">Life Lessons</string>

    <string name="admob_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="admob_banner_main">@string/admob_test_banner_id</string>
    <string name="admob_banner_quote">@string/admob_test_banner_id</string>
    <string name="admob_banner_preview">@string/admob_test_banner_id</string>
    <string name="admob_banner_list">@string/admob_test_banner_id</string>
    <string name="admob_banner_favorite">@string/admob_test_banner_id</string>
    <string name="admob_banner_image">@string/admob_test_banner_id</string>

    <string name="admob_interstitial_id">@string/admob_test_interstitial_id</string>

    <!--
    <string name="admob_interstitial_id">ca-app-pub-3112561146803951/7614234396</string>

    <string name="admob_banner_main">ca-app-pub-3112561146803951/6519455205</string>
    <string name="admob_banner_quote">ca-app-pub-3112561146803951/4631997779</string>
    <string name="admob_banner_preview">ca-app-pub-3112561146803951/2425486898</string>
    <string name="admob_banner_list">ca-app-pub-3112561146803951/1690989724</string>
    <string name="admob_banner_favorite">ca-app-pub-3112561146803951/8160179241</string>
    <string name="admob_banner_image">ca-app-pub-3112561146803951/7238829876</string>
    -->

    <string name="alert_dialog_message">Check out the best collection of Life Lessons Quotes, Daily Inspirational Quotes and Daily Motivational Quotes!\n-Supported by Sarftec\n-Version 1.0</string>
    <string name="alert_dialog_share_app">SHARE APP</string>
    <string name="alert_dialog_rate_app">RATE APP</string>
    <string name="alert_dialog_title">Lessons In Life Quotes</string>

    <string name="nativeAdMessage">Ad</string>

    <string name="appodeal_id">e6d13372a621ee5f57ff111540e07a370b615be018c29f5e</string>

    <string name="app_share_message">"Hi! Take a look at this amazing app Lessons In Life. Its free!! You should get it too."</string>
    <string name="more_apps">MORE APPS</string>
    <string name="quote_image_background">Quote Image Background</string>
    <string name="is_favorite">Is Favorite</string>
    <string name="change_quote_background">Change Quote Background</string>

    <string name="loading">Preparing Lessons…</string>
    <string name="favorite_quotes">Favorite Quotes</string>
    <string name="app_info">App Info</string>
    <string name="no_favourite">No Favourite Quote Available</string>
    <string name="at_least_a_quote">Select at least one quote as favourite</string>

    <string name="reader_alignment">Alignment</string>
    <string name="reader_background">Background</string>
    <string name="reader_text_size">Text size</string>

    <string name="reader_theme">Text color</string>
    <string name="reader_font">Font style</string>
    <string name="reader_bg_opacity">Opacity</string>
    <string name="copy">Copy</string>
    <string name="change_image">Change Image</string>
    <string name="share">Share</string>
    <string name="save_quote">Save Quote</string>
    <string name="bookmark">Bookmark</string>
</resources>