<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="binding"
            type="com.sarftec.lifelessons.application.binding.MainToolbarBinding" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/main_toolbar_heading_height"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/heading_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/heading_image"
            app:layout_constraintTop_toTopOf="@+id/heading_image">

            <ImageView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> binding.onInfo()}"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/favorite"
                app:srcCompat="@drawable/ic_info"
                android:contentDescription="@string/app_info" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> binding.onFavorite()}"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/info"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_favorite"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/favorite_quotes" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/heading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="start|center_vertical"
                android:text="@string/app_name"
                android:textAppearance="@style/ToolbarTextAppearance"
                android:textColor="?attr/appToolbarTitleColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/heading_image"
            android:layout_width="@dimen/main_toolbar_image_size"
            android:layout_height="@dimen/main_toolbar_image_size"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CornerSize50Percent"
            app:coilImage="@{binding.coilImage}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>