<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="binding"
            type="com.sarftec.lifelessons.application.binding.QuoteBinding" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/quote_image_background"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:image="@{binding.image}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/quote_view_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:lineSpacingExtra="6sp"
                android:text="@{binding.message}"
                android:textColor="?attr/appListQuoteColor"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Sometimes taking the red pill makes you feel better. Life is what happens when you are busy making other plans. Make hay whiles the sun shines" />
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/bottom_quote_layout_card_size"
                    android:layout_height="@dimen/bottom_quote_layout_card_size"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.onImageChange()}"
                    app:shapeAppearanceOverlay="@style/CornerSize50Percent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_change"
                            android:contentDescription="@string/change_quote_background" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/bottom_quote_layout_card_size"
                    android:layout_height="@dimen/bottom_quote_layout_card_size"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.onShare()}"
                    app:shapeAppearanceOverlay="@style/CornerSize50Percent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_share"
                            android:contentDescription="@string/share" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/bottom_quote_layout_card_size"
                    android:layout_height="@dimen/bottom_quote_layout_card_size"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.onCopy()}"
                    app:shapeAppearanceOverlay="@style/CornerSize50Percent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_copy"
                            android:contentDescription="@string/copy" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="@dimen/bottom_quote_layout_card_size"
                    android:layout_height="@dimen/bottom_quote_layout_card_size"
                    app:shapeAppearanceOverlay="@style/CornerSize50Percent"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> binding.onFavorite()}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:image="@{binding.favoriteIcon}"
                            tools:src="@drawable/ic_love_red"
                            android:contentDescription="@string/is_favorite" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>